# cmd/api/main.go
@@ -81,9 +81,9 @@ func main() {
 	api.Post("/buckets/:bucket_key/objects", server.UploadObject)
 	api.Get("/buckets/:bucket_key/objects", server.ListObjects)
 
-	api.Get("/objects/:id", server.GetObject)
-	api.Get("/objects/:id/download", server.DownloadObject)
-	api.Delete("/objects/:id", server.DeleteObject)
+	api.Get("/objects/*/download", server.DownloadObject)
+	api.Get("/objects/*", server.GetObject)
+	api.Delete("/objects/*", server.DeleteObject)
 
 	app.Use(func(c fiber.Ctx) error {
 		return c.Status(fiber.StatusNotFound).JSON(APIError{Error: "route not found"})
